<resources>
    <string name="app_name">binar-e-commerce</string>
    <string name="register">Register</string>
    <string name="inputName">Input Name</string>
    <string name="inputEmail">Input Email</string>
    <string name="inputPassword">Input Password</string>
    <string name="inputRePassword">Re-Input Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pilih_bahasa">Select a Language</string>
    <string name="don_t_you_have_an_account_sign_up">Don\'t you have an account? Sign Up</string>
    <string name="judul_film">Judul Film</string>
    <string name="news">News</string>
    <string name="_22_05_2023">22/05/2023</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_eu_magna_aliquet_placerat_tellus_vitae_efficitur_diam_nulla_facilisi_nulla_facilisi_quisque_pulvinar_nisi_quis_tincidunt_lacinia">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu magna aliquet, placerat tellus vitae, efficitur diam. Nulla facilisi. Nulla facilisi. Quisque pulvinar nisi quis tincidunt lacinia.</string>
    <string name="judul_news">Judul News</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="Cart">Cart</string>
    <string name="account">Account</string>
    <string name="input_name">input name</string>
    <string name="input_dob">input_dob</string>
    <string name="input_address">input address</string>
    <string name="update">update</string>
    <string name="profile">Profile</string>
    <string name="input_username">input username</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="rp55_000">Rp55.000</string>
    <string name="contoh_deskripsi_produk">Contoh deskripsi produk</string>
    <string name="x">x</string>
    <string name="rp100_000">Rp100.000</string>
    <string name="_47">47</string>
    <string name="history">History</string>
    <string name="news_update">News Update</string>
    <string name="news_product">News Product</string>
    <string name="detail">Detail</string>
    <string name="product">Product</string>
    <string name="harga">Harga</string>
    <string name="name">Name</string>
    <string name="detail_news">Detail News</string>
</resources>