<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardHistory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgHistory"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:text="@string/nama_produk"
            android:id="@+id/nameHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgHistory"
            />



        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Caption"
            android:text="@string/_47"
            android:id="@+id/amountHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgHistory"
            android:layout_below="@id/nameHistory"/>

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Caption"
            android:id="@+id/xHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/x"
            android:layout_below="@id/nameHistory"
            android:layout_toEndOf="@id/amountHistory"/>


        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Caption"
            android:id="@+id/priceHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameHistory"
            android:layout_toEndOf="@id/xHistory"
            android:text="@string/rp55_000" />

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:id="@+id/dscHistory"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceHistory"
            android:layout_toEndOf="@id/imgHistory"
            android:text="@string/contoh_deskripsi_produk" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/dscHistory"
            android:layout_toEndOf="@id/imgHistory"
            android:background="@color/gray"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/totalHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp100_000"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/line"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView >