<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/news"
        android:layout_marginBottom="40dp"/>

    <ImageView
        android:id="@+id/newsImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:text="@string/judul_news"
        android:id="@+id/detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

    <TextView
        style="@style/TextAppearance.Material3.BodySmall"
        android:id="@+id/detailDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/_22_05_2023" />

    <TextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:id="@+id/detailDsc"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_eu_magna_aliquet_placerat_tellus_vitae_efficitur_diam_nulla_facilisi_nulla_facilisi_quisque_pulvinar_nisi_quis_tincidunt_lacinia"
        tools:ignore="VisualLintLongText" />



</LinearLayout>