<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
        android:id="@+id/imgFav"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_launcher_background"/>

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:text="@string/nama_produk"
            android:id="@+id/nameFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgFav"/>

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:id="@+id/priceFav"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameFav"
            android:layout_toEndOf="@id/imgFav"
            android:text="@string/rp55_000" />

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:id="@+id/dscFav"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceFav"
            android:layout_toEndOf="@id/imgFav"
            android:text="@string/contoh_deskripsi_produk" />

        <ImageView
            android:id="@+id/deleteFav"
            android:src="@drawable/deleteicn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/dscFav"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView >