<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="20dp"
    android:id="@+id/cartCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgCart"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:text="@string/nama_produk"
            android:id="@+id/nameCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgCart"/>

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:id="@+id/priceCart"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameCart"
            android:layout_toEndOf="@id/imgCart"
            android:text="@string/rp55_000" />

        <TextView
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:id="@+id/dscCart"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceCart"
            android:layout_toEndOf="@id/imgCart"
            android:text="@string/contoh_deskripsi_produk" />

        <ImageView
            android:id="@+id/deleteCart"
            android:src="@drawable/deleteicn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/dscCart"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>